--- a/projects/manageu/mangeu.html
+++ b/projects/manageu/mangeu.html
@@ -1,12 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>manage-u</title>
-</head>
-<body>
-    
-</body>
-<script src="./scripts/manageu.js" type="module"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+      integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./style/manageu.css" />
+  </head>
+  <body>
+    <div class="container text-center">
+      <h1 class="display-4 text-light text-bg-secondary">
+        MANAGE-U <i class="fa-solid fa-check-double text-warning"></i>
+      </h1>
+      <div class="form-floating mb-3 d-inline-block w-50">
+        <input
+          type="text"
+          class="form-control"
+          id="description"
+          placeholder="Task description"
+        />
+        <label for="description">Task description</label>
+      </div>
+      <!-- <button class="btn btn-warning" id="newTaskB">+</button> -->
+      <button class="btn btn-warning" onclick="addNewTask()">+</button>
+
+      <div>
+        <h5 class="display-5 text-success">Active</h5>
+
+        <ul id="activeTasks" class="list-group mb-4">
+          <div>
+            <li class="list-group-item d-inline-block w-50">
+              ${task.description}
+            </li>
+            <button
+              class="btn btn-success me-1"
+              onclick="completeTask(${task.id})"
+            >
+              <i class="fa-solid fa-check"></i></button
+            ><button class="btn btn-primary me-1">
+              <i class="text-light fa-sharp fa-solid fa-pencil"></i></button
+            ><button class="btn btn-danger me-1">
+              <i class="fa-solid fa-trash"></i>
+            </button>
+          </div>
+        </ul>
+      </div>
+      <div>
+        <h5 class="display-5 text-danger">Completed</h5>
+        <ul id="completedTasks" class="list-group mb-4">
+          <div>
+            <li class="list-group-item d-inline-block w-50">
+              ${task.description}
+            </li>
+            <button
+              class="btn btn-success me-1"
+              onclick="completeTask(${task.id})"
+            >
+              <i class="fa-solid fa-check"></i></button
+            ><button class="btn btn-primary me-1">
+              <i class="text-light fa-sharp fa-solid fa-pencil"></i></button
+            ><button class="btn btn-danger me-1">
+              <i class="fa-solid fa-trash"></i>
+            </button>
+          </div>
+        </ul>
+      </div>
+    </div>
+
+    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" >1</button> -->
+
+
+<div class="modal fade" id="changeModalWindows" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Recipient:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="message-text" class="col-form-label">Message:</label>
+            <textarea class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+
+  <script src="./scripts/manageu.js" type="module"></script>
 </html>
