--- a/projects/manageu/mangeu.html
+++ b/projects/manageu/mangeu.html
@@ -88,24 +88,25 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Description update</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <form>
           <div class="mb-3">
-            <label for="recipient-name" class="col-form-label">Recipient:</label>
-            <input type="text" class="form-control" id="recipient-name">
+            <label for="recipient-name" class="col-form-label">Please Update Description</label>
+            <input type="text" class="form-control" id="desc-update" data-autofocus autofocus>
           </div>
-          <div class="mb-3">
+          <!-- <div class="mb-3">
             <label for="message-text" class="col-form-label">Message:</label>
             <textarea class="form-control" id="message-text"></textarea>
-          </div>
+          </div> -->
         </form>
       </div>
+      <div id="recID" >11</div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
+        <button type="button" id="lastItem" class="btn btn-primary" data-bs-dismiss="modal" onclick="completeUpdateTaskDescription()">Update</button>
       </div>
     </div>
   </div>
