contnoue to work on manage-u

--- a/projects/manageu/mangeu.html
+++ b/projects/manageu/mangeu.html
@@ -274,8 +274,7 @@
         id="changeModalWindows"
         tabindex="-1"
         aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
+        aria-hidden="true"      >
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -309,7 +308,7 @@
           </div> -->
               </form>
             </div>
-            <div id="recID">11</div>
+            <div id="recID"></div>
             <div class="modal-footer">
               <button
                 type="button"
@@ -323,7 +322,7 @@
                 id="lastItem"
                 class="btn btn-primary"
                 data-bs-dismiss="modal"
-                onclick="completeUpdateTaskDescription()"
+                onclick="completeUpdateAction()"
               >
                 Update
               </button>
