--- a/projects/projectName4/project4.html
+++ b/projects/projectName4/project4.html
@@ -38,9 +38,9 @@
 
   <body class="bodyFormat">
    
-    <!-- <img src="images/imageTop.png" alt=""> -->
+    
     <div dir="rtl" class="mainBox">
-      <div class="imageForMobile"><img src="./images/ImageMobile.png" alt=""></div>
+      <div class="imageForMobile"><img src="./images/ImageMobile.png" alt="Mobile image"></div>
       <h1>תן לנו להוביל אותך קדימה</h1>
       <p>
         לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא
