--- a/projects/projectName2/project2LandingPage.html
+++ b/projects/projectName2/project2LandingPage.html
@@ -10,7 +10,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 2 Landing Page</title>
-    <link rel="stylesheet" href="../projectName1/style/projectLandingPage.css" />
+    <link
+      rel="stylesheet"
+      href="../projectName1/style/projectLandingPage.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,9 +26,9 @@
     <!-- תפריט -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <img src="images/profile-image.jpeg" alt="profile" id="profileImage" />
+        <img src="images/profile-image.jpeg" alt="profile" id="profile-Image" />
         <a href="../../index.html"
-          ><img src="images/myName.png" alt="my name" id="myName"
+          ><img src="images/my-Name.png" alt="my name" id="my-Name"
         /></a>
 
         <button
@@ -63,14 +66,14 @@
 
     <!-- שם הפרןיקט -->
 
-    <div class="container-fluid mainSection">
-      <h1 class="text-center mainSectionH1">פרויקט 2</h1>
-      <p class="text-center mainSectionP">אתר המתנות הגדול</p>
+    <div class="container-fluid main-section">
+      <h1 class="text-center main-sectionH1">פרויקט 2</h1>
+      <p class="text-center main-sectionP">אתר המתנות הגדול</p>
 
       <div class="buttonDiv">
         <div class="colProj2">
           <a
-            class="projectLinkButton"
+            class="project-link-button"
             href="./project2.zip"
             download="project2.zip"
             >&lt&lt להורדת הפרויקט<i class=""></i
@@ -78,7 +81,7 @@
         </div>
 
         <div class="colProj2">
-          <a class="projectLinkButton" href="project2.html" target="_blank"
+          <a class="project-link-button" href="project2.html" target="_blank"
             >&lt&lt לצפייה בפרויקט</a
           >
         </div>
