--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           />
 
           <img
-            src="images/my-Name.png"
+            src="./images/myName.png"
             alt="my name"
             class="img-fluid"
             id="my-Name"
@@ -492,53 +492,62 @@
     <!-- ------------------------------- -->
 
     <div class="socialMedia">
-      <div class="social-media-grid">
-        <div class="emptyLine"></div>
-        <!-- <div class="social-media-item-grid"> -->
-        <img
-          src="./images/Icon material-location-on.png"
-          alt="location"
-          class="social-media-item-gridIcon"
-        />
-        <img
-          src="./images/Icon simple-email.png"
-          alt="mail"
-          class="social-media-item-gridIcon"
-        />
+      <div class="emptyLine"></div>
 
-        <img
-          src="./images/Icon simple-whatsapp.png"
-          alt="location"
-          class="social-media-item-gridIcon"
-        />
-        <img
-          src="./images//Icon simple-phone.png"
-          alt="location"
-          class="social-media-item-gridIcon"
-        />
-        <img
-          src="./images/Icon awesome-linkedin-in.png"
-          alt="location"
-          class="social-media-item-gridIcon"
-        />
-        <img
-          src="./images/Icon awesome-facebook-f.png"
-          alt="location"
-          class="social-media-item-gridIcon"
-        />
-        <p class="social-media-item-gridText" id="location1">שנקין 5, ת״א</p>
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-sm-2">
+            <img
+              src="./images/Icon material-location-on.png"
+              alt="location"
+              class="social-media-item-gridIcon"
+            />
+            <p>ורד 27 להבים</p>
+          </div>
+          <div class="col-sm-2">
+            <img
+              src="./images/Icon simple-email.png"
+              alt="mail"
+              class="social-media-item-gridIcon"
+            />
+            <p>ronenram1234@gmail.com</p>
+          </div>
+          <div class="col-sm-2">
+            <img
+              src="./images/Icon simple-whatsapp.png"
+              alt="location"
+              class="social-media-item-gridIcon"
+            />
+            <p>+972-52-8742545</p>
+          </div>
+          <div class="col-sm-2">
+            <img
+              src="./images//Icon simple-phone.png"
+              alt="location"
+              class="social-media-item-gridIcon"
+            />
+            <p>+972-52-8742545</p>
+          </div>
+          <div class="col-sm-2">
+            <img
+              src="./images/Icon awesome-linkedin-in.png"
+              alt="location"
+              class="social-media-item-gridIcon"
+            />
+            <p>https://www.linkedin.com/in/ronen-ram/</p>
+          </div>
+          <div class="col-sm-2">
+            <img
+              src="./images/Icon awesome-facebook-f.png"
+              alt="location"
+              class="social-media-item-gridIcon"
+            />
+            <p>Ronen Ram</p>
+          </div>
+        </div>
 
-        <p class="social-media-item-gridText" id="location2">
-          israeli@gmail.com
-        </p>
-        social-media-item social-media-item
-        <p class="social-media-item-gridText" id="location3">050.111.1111</p>
+        
 
-        <p class="social-media-item-gridText" id="location4">050.111.1111</p>
-
-        <p class="social-media-item-gridText" id="location5">ישראל ישראלי</p>
-
-        <p class="social-media-item-gridText" id="location6">#ISRAEL_ISRAELI</p>
 
         <div class="emptyLine"></div>
       </div>
