--- a/projects/flag/flag.html
+++ b/projects/flag/flag.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="bg-image">
-    <div class="container container-div" >
+    <div class="container  container-div" >
       <div class="input-group input-div">
         <input
           type="text"
@@ -34,7 +34,7 @@
         </button>
       </div>
 
-      <div class="container" id="cardId">
+      <div class="container d-flex justify-content-center align-items-center" id="cardId">
         <!-- js code will create the country card -->
       </div>
     </div>
