--- a/projects/guessTheNumber/guessTheNumber.html
+++ b/projects/guessTheNumber/guessTheNumber.html
@@ -19,8 +19,8 @@
     />
   </head>
   <body>
-    <div class="main">
-      <div class="container">
+    <div class="main" id="div-css" >
+      <div class="containers" >
         <div class="row">
           <div class="col-12 col-md-6 text-center" id="leftColumn">
             <h1 class="display-4" style="color: red">Guess the Number</h1>
@@ -59,6 +59,10 @@
         </div>
       </div>
     </div>
+    <div id="div-css">
+
+
+    </div>
   </body>
-  <script src="guessTheNumber.js"></script>
+  <script src="./script/guessTheNumber.js"></script>
 </html>
