--- a/projects/flag/flag.html
+++ b/projects/flag/flag.html
@@ -19,7 +19,7 @@
         <input
           type="text"
           class="form-control field-div"
-          placeholder="city"
+          placeholder="Please enter a capital city "
           aria-label="Recipient's username"
           aria-describedby="basic-addon2"
           id="inputText"
