complete store project

--- a/projects/product/product.html
+++ b/projects/product/product.html
@@ -20,7 +20,7 @@
         <img src="./images/cart-shopping-solid.svg" alt="cart" />
         <h1>DUCT</h1>
       </div>
-      <div class="container" style="background-color: beige">
+      <div class="container  border border-secondary" style="background-color: beige">
         <form class="needs-validation" id="formID" novalidate="">
           <div class="row g-3 first-line">
             <div class="col-md-4">
@@ -146,7 +146,7 @@
       <div style="height: 2rem"></div>
 
       <!-- <div class="container grid-container" id="tableLine" style="background-color: bisque"> -->
-      <div class="container grid-container" id="tableLine">
+      <div class="container grid-container  border border-secondary" id="tableLine">
         <div class="row g-1 allTable" style="font-weight: bold">
           <div class="col col-md-2">Name</div>
           <div class="col col-md-2">Price</div>
