--- a/projects/shoppingList/shoppingList.html
+++ b/projects/shoppingList/shoppingList.html
@@ -21,48 +21,54 @@
     />
   </head>
   <body>
-    <div class="py-5 text-center flex-img-container">
-      <h1>PR<i class="fa-brands fa-shopware text-success"></i>DUCT</h1>
-    </div>
-    <!-- <div class="container" style="background-color: beige"> -->
-    <div class="container">
-      <form class="needs-validation" id="formID" novalidate="">
-        <div class="row g-3 first-line">
-          <div class="col-md-9">
-            <input
-              type="text"
-              class="form-control"
-              id="itemList"
-              placeholder="Item List"
-              value=""
-              required=""
-            />
-            <div class="invalid-feedback">Valid first name is required.</div>
+    <div class="main">
+      <div class="py-5 text-center flex-img-container">
+        <h1>PR<i class="fa-brands fa-shopware text-success"></i>DUCT</h1>
+      </div>
+      <!-- <div class="container" style="background-color: beige"> -->
+      <div class="container">
+        <form class="needs-validation" id="formID" novalidate="">
+          <div class="row g-3 first-line justify-content-center">
+            <div class="col-md-6">
+              <input
+                type="text"
+                class="form-control"
+                id="itemList"
+                placeholder="Item List"
+                value=""
+                required=""
+              />
+              <div class="invalid-feedback">Valid first name is required.</div>
+            </div>
+
+            <div class="col-md-3">
+              <button
+                class="btn btn-primary btn-md w-100"
+                type="button"
+                onclick="addNewLine()"
+              >
+                Add
+              </button>
+            </div>
           </div>
+        </form>
 
-          <div class="col-md-3">
-            <button
-              class="btn btn-primary btn-md w-100"
-              type="button"
-              onclick="addNewLine()"
-            >
-              Add
-            </button>
+        <div style="height: 2rem"></div>
+
+        <div class="row mt-3 justify-content-center">
+          <div class="col-sm-6 border border-secondary p-0 m-0">
+            <ul class="list-group text-start">
+              <!-- <li class="list-group-item">Orange</li> -->
+            </ul>
           </div>
-        </div>
-      </form>
-
-      <div style="height: 2rem"></div>
-
-      <div class="row mt-3">
-        <div class="col-sm-9">
-          <ul class="list-group text-start">
-            <!-- <li class="list-group-item">Orange</li> -->
-          </ul>
         </div>
       </div>
     </div>
   </body>
-
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
   <script src="./scripts/shoppingList.js"></script>
 </html>
