--- a/projects/projectName7/project7LandingPage.html
+++ b/projects/projectName7/project7LandingPage.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <img src="images/profile-image.jpeg" alt="profile" id="profile-Image" />
         <a href="../../index.html"
-          ><img src="images/my-Name.png" alt="my name" id="my-Name"
+          ><img src="images/myName.png" alt="my name" id="my-Name"
         /></a>
 
         <button
