Connect all projects to Gallery

--- a/projects/guessTheNumber/guessTheNumber.html
+++ b/projects/guessTheNumber/guessTheNumber.html
@@ -17,7 +17,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/guessTheNumber.css" />
+    <link rel="stylesheet" href="./style/guessTheNumber.css" />
   </head>
   <body>
     <div id="all">
@@ -56,7 +56,7 @@
             </div>
 
             <div class="col-12 col-md-6 text-center" id="rightColumn">
-              <p class="rightSizeText">Please enter number between 1 and 10</p>
+              <p class="rightSizeText h4">Please enter number between 1 and 10</p>
 
               <div class="answers"></div>
               <button
