--- a/projects/manageu/manageuLandingPage.html
+++ b/projects/manageu/manageuLandingPage.html
@@ -9,7 +9,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>calculator</title>
+    <title>ManageU</title>
     <link rel="stylesheet" href="style/landingPage.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -29,7 +29,7 @@
   <body>
     <div class="fullPage">
       <div class="container cont-page">
-        <!-- תפריט -->
+        
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
             <img
@@ -81,7 +81,7 @@
         <div id="main">
           <div class="container-fluid main-section">
             <h1 class="text-center main-sectionH1">
-              JavaScript Project - calculator
+              JavaScript Project - ManageU
             </h1>
             <p class="text-center main-sectionP"></p>
 
@@ -99,7 +99,7 @@
               <button type="button" class="btn btn-info colProj2">
                 <a
                   class="project-link-button"
-                  href="./calculator.html"
+                  href="./mangeu.html"
                   target="_blank"
                   >&lt&lt לצפייה בפרויקט</a
                 >
@@ -131,7 +131,7 @@
           </div>
 
           <div class="imageDiv">
-            <iframe src="./calculator.html" style="width: 100%; height: 50vh; border: none;"></iframe>
+            <iframe src="./mangeu.html" style="width: 100%; height: 50vh; border: none;"></iframe>
        
           </div>
         </div>
