--- a/projects/reversi/reversiLandingPage.html
+++ b/projects/reversi/reversiLandingPage.html
@@ -9,7 +9,7 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>calculator</title>
+    <title>Reversi</title>
     <link rel="stylesheet" href="style/landingPage.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -81,12 +81,12 @@
         <div id="main">
           <div class="container-fluid main-section">
             <h1 class="text-center main-sectionH1">
-              JavaScript Project - calculator
+              JavaScript Project - Reversi
             </h1>
-            <p class="text-center main-sectionP"></p>
+            <!-- <p class="text-center main-sectionP"><img src="./images/reversi.jpg" class="img-fluid" alt="Responsive image">></p> -->
 
             <div class="buttonDiv">
-              <!-- <div class="colProj2"> -->
+              
               <button type="button" class="btn btn-info colProj2">
                 <a
                   class="project-link-button"
@@ -99,7 +99,7 @@
               <button type="button" class="btn btn-info colProj2">
                 <a
                   class="project-link-button"
-                  href="./calculator.html"
+                  href="./reversi.html"
                   target="_blank"
                   >&lt&lt לצפייה בפרויקט</a
                 >
@@ -131,9 +131,15 @@
           </div>
 
           <div class="imageDiv">
-            <iframe src="./calculator.html" style="width: 100%; height: 50vh; border: none;"></iframe>
+            <img
+              src="./images/site.png"
+              alt="Project2 image"
+              class="imageOfWebSite"
+            />
+          <!-- <div class="imageDiv">
+            <iframe src="./images/site.png" style="width: 100%; height: 50vh; border: none;"></iframe>
        
-          </div>
+          </div> -->
         </div>
 
         <footer class="container-fluid footerStyle"></footer>
