--- a/projects/calculator/calculatorLandingPage.html
+++ b/projects/calculator/calculatorLandingPage.html
@@ -81,7 +81,7 @@
         <div id="main">
           <div class="container-fluid main-section">
             <h1 class="text-center main-sectionH1">
-              JavaScript Project - calculator
+              JavaScript Project - Calculator
             </h1>
             <p class="text-center main-sectionP"></p>
 
