--- a/projects/guessTheNumber/guessLandingPage.html
+++ b/projects/guessTheNumber/guessLandingPage.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess The Number</title>
+    <link rel="icon" type="image/png" href="./images/guess.svg">
     <link rel="stylesheet" href="style/landingPage.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -90,8 +91,8 @@
               <button type="button" class="btn btn-info colProj2">
                 <a
                   class="project-link-button"
-                  href="./project.zip"
-                  download="project.zip"
+                  href="./guessTheNumber.zip"
+                  download="guessTheNumber.zip"
                   >&lt&lt להורדת הפרויקט<i class=""></i
                 ></a>
               </button>
