--- a/projects/guessTheNumber/guessTheNumber.html
+++ b/projects/guessTheNumber/guessTheNumber.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guess The Number</title>
+    <link rel="icon" type="image/png" href="./images/guess.svg">
     <style>
       .main {
         border: 1px solid #000;
