--- a/projects/reversi/reversi.html
+++ b/projects/reversi/reversi.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="./images/strategy-game.png" type="image/png" />
     <!-- <title><i class="fa-solid fa-circle-dot" style="color: #0a0a0a;"></i>Reversi - Game</title> -->
     <title>Reversi - Game</title>
+    <link rel="icon" type="image/png" href="./images/reversi.svg">
     <link rel="stylesheet" href="./style/reversi.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
