--- a/projects/shoppingList/shoppingList.html
+++ b/projects/shoppingList/shoppingList.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/shoppingList.css" />
     <title>shopping List</title>
-
+    <link rel="icon" type="image/png" href="./image/shop.svg">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
